# IndirectAccessAnalyser

./: .gitignore  .gitmodules  CMakeLists.txt  IndirectAccessAnalyser.cpp  README.md  install_llvm.sh
test/: code.cpp  temp.c
